2008-08-17  Moritz  <moritz@gnu.org>

	* Makefile.am: Use CLEANFILES intead of clean-local target for
	pam_poldi.so.
	(uninstall-local, install-exec-local): New targets.

2008-08-07  Moritz  <moritz@gnu.org>

	* pam_poldi.c (pam_sm_authenticate): Removed second call to
	log_set_flags().  Some cosmetic changes.
	(pam_sm_authenticate): Only free username_authenticated in case
	the authentication method returns success. Use xfree instead of
	free. Changed two messages.
	(destroy_context): Do not free ctx->cookie -- that's the
	responsibility of the authentication methods _deinit function.

2008-08-04  Moritz  <moritz@gnu.org>

	* pam_poldi.c (pam_sm_authenticate): New variable:
	getpin_cb_data. Call scd_set_pincb().
	Include "getpin-cb.h".

	* auth-methods.h: Removed some disabled code.

	* pam_poldi.c: Marked strings for i18n.

2008-07-29  Moritz  <moritz@gnu.org>

	* pam_poldi.c (i18n_cb): New function...
	(create_context, pam_sm_authenticate): ... use it here.

2008-07-14  Moritz  <moritz@gnu.org>

	* auth-methods.h: Include simpleparse.h instead of argparse.h.
	(auth_method_func_parsecb_t): Removed type.
	(struct auth_method_parse_cookie): New struct.
	(struct auth_method_s): Dropped members func_parsecb, arg_otps,
	new members opt_specs, parsecb.

	* pam_poldi.c: Include poldi.h, simplelog.h, simpleparse.h instead
	of not config.h, jnlib/logging.h, optparse.h.
	Replace parsing/logging related code in favour of new
	simplelog/simpleparse subsystem.
	

2008-05-25  Moritz  <moritz@gnu.org>

	Some cleanups, added GPL3 headers.

	* pam_poldi.c: New conf options: arg_scdaemon_socket, arg_scdaemon_program.
	(pam_poldi_options_cb): Handle new options.
	(create_context): Initialize new context struct members.
	(destroy_context): Release them.
	(pam_sm_authenticate): Pass scdaemon_socket and scdaemon_program to scd_connect.
	(auth_method_lookup): Return -1 in case the auth method could not be found.

2008-05-03  Moritz  <moritz@gnu.org>
