@@ -1,5 +1,8 @@
 2008-08-17  Moritz  <moritz@gnu.org>
 
+	* pam_poldi.c (pam_sm_authenticate): Removed code related to
+	system scdaemon settings.
+
 	* Makefile.am: Use CLEANFILES intead of clean-local target for
 	pam_poldi.so.
 	(uninstall-local, install-exec-local): New targets.
